:four_leaf_clover: :grin: :smirk:

--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
   <meta http-equiv="Cache-Control" content="no-siteapp">
-  <meta name="format-detection" content="telphone=no, email=no">
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
+  <script>
+    window.location.href = './dist';
+  </script>
   <title>Cool Picture</title>
 </head>
-
 <body>
-  <div id="app-box"></div>
-  <%=htmlWebpackPlugin.files.webpackManifest%>
+  ✌️
 </body>
-
 </html>
