--- a/tpl.html
+++ b/tpl.html
@@ -31,7 +31,7 @@
       margin-left: -60px;
     }
 
-    .loading_content #svg_loading_content {
+    #svg_loading_content {
       -webkit-transform: rotate(45deg);
       transform: rotate(45deg);
       -webkit-transform-origin: 50% 55%;
@@ -40,7 +40,7 @@
       animation: rou 3s ease infinite;
     }
 
-    .loading_content #XMLID_7_ {
+    #XMLID_7_ {
       -webkit-transform: translate(-18px, 0);
       transform: translate(-18px, 0);
       fill: #FF3E5F;
@@ -48,7 +48,7 @@
       animation: cc_al 0.8s ease-in-out 0.1s alternate infinite;
     }
 
-    .loading_content #XMLID_8_ {
+    #XMLID_8_ {
       -webkit-transform: translate(18px, 0);
       transform: translate(18px, 0);
       fill: #FF3E5F;
@@ -56,7 +56,7 @@
       animation: cc_ar 0.8s ease-in-out 0s alternate infinite;
     }
 
-    .loading_content #XMLID_9_ {
+    #XMLID_9_ {
       -webkit-transform: translate(-18px, 0);
       transform: translate(-18px, 0);
       fill: #FF3E5F;
@@ -64,7 +64,7 @@
       animation: cc_al 0.8s ease-in-out 0.1s alternate infinite;
     }
 
-    .loading_content #XMLID_10_ {
+    #XMLID_10_ {
       -webkit-transform: translate(-18px, 0);
       transform: translate(-18px, 0);
       fill: #FF3E5F;
@@ -72,7 +72,7 @@
       animation: cc_al 0.8s ease-in-out 0.1s alternate infinite;
     }
 
-    .loading_content #XMLID_11_ {
+    #XMLID_11_ {
       -webkit-transform: translate(18px, 0);
       transform: translate(18px, 0);
       fill: #FF3E5F;
@@ -80,7 +80,7 @@
       animation: cc_ar 0.8s ease-in-out 0s alternate infinite;
     }
 
-    .loading_content #XMLID_1_ {
+    #XMLID_1_ {
       fill: none;
       stroke: #FF3E5F;
       stroke-width: 3;
