--- a/tpl.html
+++ b/tpl.html
@@ -174,13 +174,14 @@
 <body>
   <div class="loading_content_wapper">
     <div class="loading_content">
-      <svg version="1.0" id="svg_loading_content" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 80 80" style="enable-background:new 0 0 80 80;" xml:space="preserve">
-      <polygon id="XMLID_7_" class="st0" points="40.4,24.1 34.7,34 46.2,34 "/>
-      <polygon id="XMLID_8_" class="st0" points="23.6,53 57.3,53 53.6,46 27.3,46 "/>
-      <polygon id="XMLID_9_" class="st0" points="20,58 60.9,58 57.3,53 23.6,53 "/>
-      <polygon id="XMLID_10_" class="st0" points="31,40 27.3,46 53.6,46 49.9,40 "/>
-      <polygon id="XMLID_11_" class="st0" points="46.2,34 34.7,34 31,40 49.9,40 "/>
-      <polygon id="XMLID_1_" class="st1" points="13.7,61.5 40.4,15.3 67.1,61.5 "/>
+      <svg version="1.1" id="svg_loading_content" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      	 viewBox="-143 74 80 80" style="enable-background:new -143 74 80 80;" xml:space="preserve">
+        <polygon id="XMLID_7_" class="st0" points="-102.6,98.1 -108.3,108 -96.8,108 "/>
+        <polygon id="XMLID_8_" class="st0" points="-119.4,127 -85.7,127 -89.4,120 -115.7,120 "/>
+        <polygon id="XMLID_9_" class="st0" points="-123,132 -82.1,132 -85.7,127 -119.4,127 "/>
+        <polygon id="XMLID_10_" class="st0" points="-112,114 -115.7,120 -89.4,120 -93.1,114 "/>
+        <polygon id="XMLID_11_" class="st0" points="-96.8,108 -108.3,108 -112,114 -93.1,114 "/>
+        <polygon id="XMLID_1_" class="st1" points="-88.5,113.7 -75.9,135.5 -129.3,135.5 -102.6,89.3 "/>
       </svg>
     </div>
   </div>
